Update all URLs to meatspace.so (live domain) - Website: meatspace.so - Twitter: @meatspace_sol - GitHub: perrykleese/meatspace

--- a/app/index.html
+++ b/app/index.html
@@ -233,8 +233,8 @@
         <div class="footer">
             <p>Built for <a href="https://www.colosseum.org/" target="_blank">Solana AI Agent Hackathon 2026</a></p>
             <p style="margin-top: 0.5rem;">
-                <a href="https://twitter.com/meatspace_xyz" target="_blank">Twitter</a> · 
-                <a href="https://github.com/meatspace-xyz" target="_blank">GitHub</a> · 
+                <a href="https://twitter.com/meatspace_sol" target="_blank">Twitter</a> · 
+                <a href="https://github.com/perrykleese/meatspace" target="_blank">GitHub</a> · 
                 <a href="https://discord.gg/meatspace" target="_blank">Discord</a>
             </p>
         </div>
